--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
-		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+		<h1 class="editable"><strong>To WordPress or not to WordPress</strong></h1>
+		<p class="subtext editable"><strong>that is the question</strong></p>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Wyjdź poza szablon</a></div>
+		<div class="hero__image-container">
+			<img src="{{ site.baseurl }}/images/hamlet.jpg" alt="Intro" class="editable" />
 		</div>
 	</div>
 </section>
