Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: To WordPress or not to WordPress
+description: Let's think out of box
 ---
+
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable"><strong>To WordPress or not to WordPress</strong></h1>
